# TestMind-AI

./: .env.example  .gitignore  Dockerfile  PRD.md  README.md  README_LANGCHAIN.md  api-documentation.yml  direct_test_generation.py  docker-compose.yml  final_comprehensive_test.py  generate_api_tests.py  main.py  pyproject.toml  pytest.ini  simple_test_gen001.py  sprint1-tdd-implementation-plan.md  sprint1_progress.json  sprint2-requirements-parser-plan.md  test_api-documentation_api.py  test_connection.py  test_core_functionality.py  test_coverage_fix.py  test_mock_requirements.py  test_real_api_generation.py  test_simple_parsing.py  test_sprint3_ai_generation.py
.promptx/: .xml-upgrade-backup-done  pouch.json
app/: __init__.py  main.py
docs/: ollama-setup-guide.md
examples/: langchain_multi_provider_demo.py  simple_langchain_demo.py
project-management/: 01-开发进度管理.md  02-每周进度跟踪表.md  03-任务看板.md  README.md  Sprint2-重构总结.md  Sprint3-启动准备.md  Sprint3-最终测试报告.md  Sprint3-测试覆盖修复报告.md  sprint2-langchain-integration.md  真实API文档测试结果.md
requirements/: base.txt  dev.txt
scripts/: ai_module_comprehensive_test.py  ai_module_detailed_report.py  check_ollama_models.py  check_sprint1_progress.py  complete_sprint2_tests.py  demo_requirements_extraction.py  detailed_test_runner.py  init_db.sql  live_test_monitor.py  quick_test.py  run_production_tests.py  run_visual_tests.py  setup_dev_env.py  simple_qwen_test.py  test_ai_modules.py  test_ai_modules_no_mock.py  test_ai_modules_ollama_only.py  test_dashboard.py  test_database_connection.py  test_ollama_qwen.py  view_test_logs.py  (+1 more)
(+75 files in other folders)
